<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/lik"
        android:icon="@drawable/ic_thumb_up_black_24dp"
        android:orderInCategory="100"
        android:title="@string/lik"
        app:showAsAction="always" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:orderInCategory="100"
        android:title="@string/lik"
        app:showAsAction="always" />

    <item
        android:id="@+id/ref"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:orderInCategory="100"
        android:title="@string/ref"
        />
    <item
        android:id="@+id/sha"
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="100"
        android:title="@string/sha"
        />

    <item
        android:id="@+id/upd"
        android:orderInCategory="100"
        android:title="@string/upd"
        app:showAsAction="never" />
    <item
        android:id="@+id/scr"
        android:checkable="true"
        android:checked="false"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/Scr" />
    <item
        android:id="@+id/action_apps"
        android:icon="@drawable/ic_baseline_adb_24"
        android:orderInCategory="100"
        android:title="More Apps"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_disclaimer"
        android:title="Disclaimer"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/pri"
        android:orderInCategory="100"
        android:title="@string/pri"
        app:showAsAction="never" />
</menu>
