<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:orientation="vertical"

    android:padding="16.0dip"

    android:visibility="visible"
    tools:context=".Start">

    <ImageView
        android:id="@+id/ski"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_clear_black_24dp" />

    <ImageView
        android:layout_width="135dp"
        android:layout_height="98dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="19.0dip"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/ttttt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25.0dip"
        android:text="@string/onboard_login_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100.0dip"
        app:cardCornerRadius="25dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:id="@+id/google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <ImageButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="#00FFFFFF"
                android:padding="7dp"
                android:scaleType="fitCenter"
                android:src="@drawable/fui_ic_googleg_color_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/goog"
                android:textAlignment="center" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40.0dip"
        android:text="@string/continue_text"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:padding="8dp"
        android:paddingBottom="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="1dp"
            android:paddingBottom="2dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="5dp">

            <ImageButton
                android:id="@+id/phone"
                android:layout_width="50.0dip"
                android:layout_height="50.0dip"
                android:background="#00FFFFFF"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_phone_android_black_24dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40.0dip"
            android:padding="1dp"

            app:cardBackgroundColor="@color/com_facebook_blue"
            app:cardCornerRadius="25dp"
            app:cardElevation="5dp">

            <ImageButton
                android:id="@+id/facebook"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="50.0dip"
                android:layout_height="50.0dip"
                android:background="#00FFFFFF"
                android:paddingRight="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/com_facebook_button_icon_blue" />
        </androidx.cardview.widget.CardView>>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40.0dip"

            android:padding="1dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="2dp">

            <ImageButton
                android:id="@+id/emaillogin"
                android:layout_width="50.0dip"
                android:layout_height="50.0dip"
                android:background="#00FFFFFF"
                android:padding="4dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_email_black_24dp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>